# shiner

./: Cargo.toml  shiner.code-workspace
api/: Cargo.toml
api/src/: main.rs  server.rs
api/src/core/: mod.rs
api/src/health/: dtos.rs  handlers.rs  mod.rs  router.rs
api/src/images/: dtos.rs  handlers.rs  mod.rs  router.rs
app/: Makefile  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/app/: app.dart
app/lib/app/extensions/: extensions.dart
app/lib/app/internal/: ai.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
app/lib/app/providers/: database.dart  images.dart  providers.dart  settings.dart
app/lib/app/router/: router.dart
app/lib/app/theme/: theme.dart
app/lib/generation/: generation.dart  generation_page.dart  generation_view.dart
app/lib/generation/widgets/: generation_form.dart  widgets.dart
app/lib/home/: home_page.dart  home_view.dart
app/lib/settings/: settings.dart  settings_page.dart  settings_view.dart
app/linux/: CMakeLists.txt
app/macos/Runner.xcodeproj/: project.pbxproj
app/rust/: Cargo.toml
app/rust/src/: frb_generated.rs  lib.rs
app/rust/src/ai/: mod.rs
app/rust/src/core/: images.rs  job.rs  mod.rs  pagination.rs  settings.rs
app/rust/src/data/: database.rs
app/rust_builder/: pubspec.yaml
app/windows/runner/: Runner.rc
cli/: Cargo.toml
cli/src/: main.rs
shiner/: Cargo.toml
shiner/src/: lib.rs
shiner/src/openai/: api.rs  dtos.rs  mod.rs
(+11 files in other folders)
