[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "multipart"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
shiner = { path = "../shiner" }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
