[package]
name = "shiner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
typed-builder = "0.21.0"
