[package]
name = "rust_lib_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
flutter_rust_bridge = "=2.9.0"
libsql = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
typed-builder = "0.21.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
